--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/navigation_timeline"
+        android:icon="@drawable/ic_baseline_alt_route_24"
+        android:title="@string/title_timeline" />
 
     <item
         android:id="@+id/navigation_dashboard"
@@ -12,12 +12,12 @@
         android:title="@string/title_dashboard" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_forecast"
+        android:icon="@drawable/ic_baseline_list_24"
+        android:title="@string/title_forecast" />
     <item
-        android:id="@+id/navigation_test"
-        android:icon="@android:drawable/ic_menu_manage"
-        android:title="@string/title_test" />
+        android:id="@+id/navigation_stats"
+        android:icon="@drawable/ic_baseline_bar_chart_24"
+        android:title="@string/title_stats" />
 
 </menu>
