--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,14 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_timeline">
-
-    <fragment
-        android:id="@+id/navigation_timeline"
-        android:name="com.example.tankauswertung.ui.timeline.TimelineFragment"
-        android:label="@string/title_timeline"
-        tools:layout="@layout/fragment_timeline" />
-
+    app:startDestination="@+id/navigation_dashboard">
 
     <fragment
         android:id="@+id/navigation_dashboard"
@@ -19,13 +12,20 @@
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
-        android:id="@+id/navigation_forecast"
-        android:name="com.example.tankauswertung.ui.forecast.ForecastFragment"
-        android:label="@string/title_forecast"
-        tools:layout="@layout/fragment_forecast" />
+        android:id="@+id/navigation_timeline"
+        android:name="com.example.tankauswertung.ui.timeline.TimelineFragment"
+        android:label="@string/title_timeline"
+        tools:layout="@layout/fragment_timeline" />
+
     <fragment
         android:id="@+id/navigation_stats"
         android:name="com.example.tankauswertung.ui.stats.StatsFragment"
         android:label="@string/title_stats"
         tools:layout="@layout/fragment_stats" />
+
+    <fragment
+        android:id="@+id/navigation_forecast"
+        android:name="com.example.tankauswertung.ui.forecast.ForecastFragment"
+        android:label="@string/title_forecast"
+        tools:layout="@layout/fragment_forecast" />
 </navigation>
