--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,5 +5,19 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/settings"
+        android:icon="@drawable/ic_baseline_settings_24"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_add_car"
+        android:orderInCategory="100"
+        android:title="@string/add_car"
+        android:icon="@drawable/ic_baseline_add_24"
+        android:visible="false"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_remove_car"
+        android:orderInCategory="100"
+        android:title="@string/remove_car"
+        android:icon="@drawable/ic_baseline_delete_24"
         app:showAsAction="never" />
 </menu>
