--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,13 +4,13 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/settings"
+        android:title="@string/title_settings"
         android:icon="@drawable/ic_baseline_settings_24"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_add_car"
         android:orderInCategory="100"
-        android:title="@string/add_car"
+        android:title="@string/title_newcar"
         android:icon="@drawable/ic_baseline_add_24"
         android:visible="false"
         app:showAsAction="never" />
