--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/action_add_car"
         android:orderInCategory="100"
-        android:title="@string/title_newcar"
+        android:title="@string/title_new_car"
         android:icon="@drawable/ic_baseline_add_24"
         android:visible="false"
         app:showAsAction="never" />
