--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,7 +8,7 @@
         android:icon="@drawable/ic_baseline_settings_24"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_add_car"
+        android:id="@+id/action_new_car"
         android:orderInCategory="100"
         android:title="@string/title_new_car"
         android:icon="@drawable/ic_baseline_add_24"
