--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/action_edit_car"
+        android:title="@string/edit_car"
+        android:icon="@drawable/ic_baseline_edit_24"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_remove_car"
-        android:orderInCategory="100"
         android:title="@string/remove_car"
         android:icon="@drawable/ic_baseline_delete_24"
         app:showAsAction="never" />
+
 </menu>
