--- a/app/src/main/res/layout/fragment_new_car.xml
+++ b/app/src/main/res/layout/fragment_new_car.xml
@@ -29,6 +29,16 @@
                 android:hint="@string/anzeigename"
                 android:textSize="24sp" />
 
+            <!-- CheckBox Elektrofahrzeug -->
+
+            <CheckBox
+                android:id="@+id/checkBoxElektro"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:text="@string/elektro"
+            />
+
             <!-- Verbrauch innerorts -->
 
             <TextView
